[project]
name = "hackernews-items"
version = "0.1.0"
description = "HackerNews items data connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "boto3>=1.35.0", "duckdb>=1.3.2", "httpx>=0.27.0", "pyarrow>=17.0.0", "pyiceberg", "ratelimit>=2.2.1", "requests>=2.32.5", "tenacity>=8.5.0",]
